# readDiag

./: .gitignore  Makefile  README.md  black.toml  diagAccess_legacy.py  environment.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_tests.sh  setup.py  teste_liviany.txt
.github/workflows/: ci.yml
docs/: index.md
docs/en/: index.md  usage.md
docs/pt/: index.md  uso.md
examples/: compare_sensor_impact_multi_cycle.py  example_impact.py  example_plotting.py  plotting_demo.ipynb  run_impact_batch.py  simulator.py  test_experiment_comparator.py
examples/.ipynb_checkpoints/: plotting_demo-checkpoint.ipynb
gsidiag/: __init__.py  __main__.py
notebooks/: readDiag_tutorial_complete-en_us.ipynb  readDiag_tutorial_completo-pt_br.ipynb  readDiag_tutorial_simple-en_us.ipynb  readDiag_tutorial_simples-pt_br.ipynb
src/readDiag/: .__init__.py.swp  .plotting.py.swp  __init__.py  conftest.py  impact.py  impact_original.py  plotting.py  reader.py  style.py
tests/: .test_read_radiance.py.swp  test_benchmark.py  test_diag_access_aliases.py  test_diag_access_utils.py  test_diag_plot_counts.py  test_error_cases.py  test_plotting.py  test_read_baseline.py  test_read_radiance.py
