# =============================
# pyproject.toml
# =============================
# TOML format
[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "readDiag"
version = "2.0.0"
description = "Package for reading and visualizing GSI diagnostic files (conventional and radiance)."
authors = [
    {name = "João Gerd Zell de Mattos", email = "joao.gerd@inpe.br"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "LGPL-3.0-or-later"}
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/joaogerd/readDiag"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["readDiag"]

